NH-33951: resolve more quality issues and remove redundant test assertions